--- a/src/app/portal/components/footer/footer.component.html
+++ b/src/app/portal/components/footer/footer.component.html
@@ -1,1 +1,7 @@
-<p>footer works!</p>
+<footer class="footer">
+    <div class="content has-text-centered">
+      <p>
+       
+      </p>
+    </div>
+  </footer>
