--- a/src/app/portal/components/header/header.component.html
+++ b/src/app/portal/components/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<nav class="navbar is-light is-spaced" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
             data-target="navbarBasicExample">
@@ -30,6 +30,7 @@
                     <a class="button is-primary">
                         <strong>Sign up</strong>
                     </a>
+                    
                     <a class="button is-light">
                         Log in
                     </a>
