--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,1 +1,66 @@
-register works
+<div class="container">
+    <div class="columns">
+        <div class="column">
+            <div class="title"> Zikos </div>
+            <p>Inscris toi stp !</p>
+            <p>En vrai on est des mecs cools et on va pas partager tes infos personnelles promis.</p>
+            <p>Sauf si on nous propose beaucoup d'argent mais c'est pas demain la veille</p>
+            <p>:)</p>
+        </div>
+        <div class="column">
+            <div class="field">
+                <label class="label">Username</label>
+                <div class="control">
+                  <input class="input" type="text" placeholder="Text input">
+                </div>
+              </div>
+              
+              <div class="field">
+                <label class="label">Email</label>
+                <div class="control has-icons-left has-icons-right">
+                  <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
+                  <span class="icon is-small is-left">
+                    <i class="fas fa-envelope"></i>
+                  </span>
+                  <span class="icon is-small is-right">
+                    <i class="fas fa-exclamation-triangle"></i>
+                  </span>
+                </div>
+                <p class="help is-danger">This email is invalid</p>
+              </div>
+              
+              <div class="field">
+                <label class="label">Your instrument</label>
+                <div class="select is-multiple">
+                    <select multiple size="7">
+                        <option value="Yukulele">Yukulele</option>
+                        <option value="Guitar">Guitar</option>
+                        <option value="Piano">Piano</option>
+                        <option value="Saxophon">Saxophon</option>
+                        <option value="Flute">Flute</option>
+                        <option value="Violin">Violin</option>
+                        <option value="Trombon">Trombon</option>
+                    </select>
+                </div>
+              </div>
+
+              <div class="field">
+                <div class="control">
+                  <label class="checkbox">
+                    <input type="checkbox">
+                    I agree to the <a >terms and conditions</a>
+                  </label>
+                </div>
+              </div>
+
+              <div class="field is-grouped">
+                <div class="control">
+                  <button class="button is-link">Submit</button>
+                </div>
+                <div class="control">
+                  <button class="button is-link is-light">Cancel</button>
+                </div>
+              </div>
+        </div>
+    </div>
+</div>
