--- a/src/app/portal/components/header/header.component.html
+++ b/src/app/portal/components/header/header.component.html
@@ -1,43 +1,46 @@
-<nav class="navbar is-light is-spaced" role="navigation" aria-label="main navigation">
-    <div class="navbar-brand">
-        <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
-            data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-        </a>
-    </div>
-
-    <div id="navbarBasicExample" class="navbar-menu">
-        <div class="navbar-start">
-            <a class="navbar-item">
-                Menu 1
+<nav class="bd-navbar navbar has-shadow  is-light is-spaced" role="navigation" aria-label="main navigation">
+    <div class="container">
+        <div class="navbar-brand">
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false"
+                data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
             </a>
-
-            <a class="navbar-item">
-                Menu 2
-            </a>
-
-            <a class="navbar-item">
-                Menu 3
-            </a>
-
         </div>
 
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item">
+                    Menu 1
+                </a>
 
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                    <a class="button is-primary"  routerLink="/register">
-                        
-                        <strong>Sign up</strong>
-                    </a>
-                    
-                    <a class="button is-light" routerLink="/login">
-                        Log in
-                    </a>
+                <a class="navbar-item">
+                    Menu 2
+                </a>
+
+                <a class="navbar-item">
+                    Menu 3
+                </a>
+
+            </div>
+
+
+            <div class="navbar-end">
+                <div class="navbar-item">
+                    <div class="buttons">
+                        <a class="button is-primary" routerLink="/register">
+
+                            <strong>Sign up</strong>
+                        </a>
+
+                        <a class="button is-light" routerLink="/login">
+                            Log in
+                        </a>
+                    </div>
                 </div>
             </div>
+
         </div>
     </div>
 </nav>
