adding a terms and conditions component

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -11,22 +11,22 @@
             <div class="field">
                 <label class="label">Username</label>
                 <div class="control">
-                  <input class="input" type="text" placeholder="Text input">
+                  <input class="input" type="text" placeholder="Username">
+                </div>
+              </div>
+              
+            <div class="field">
+                <label class="label">Password</label>
+                <div class="control">
+                  <input class="input" type="password" placeholder="***">
                 </div>
               </div>
               
               <div class="field">
                 <label class="label">Email</label>
-                <div class="control has-icons-left has-icons-right">
-                  <input class="input is-danger" type="email" placeholder="Email input" value="hello@">
-                  <span class="icon is-small is-left">
-                    <i class="fas fa-envelope"></i>
-                  </span>
-                  <span class="icon is-small is-right">
-                    <i class="fas fa-exclamation-triangle"></i>
-                  </span>
+                <div class="control">
+                  <input class="input" type="email" placeholder="your@mail.com" value="your@mail.com">
                 </div>
-                <p class="help is-danger">This email is invalid</p>
               </div>
               
               <div class="field">
@@ -48,7 +48,7 @@
                 <div class="control">
                   <label class="checkbox">
                     <input type="checkbox">
-                    I agree to the <a >terms and conditions</a>
+                    I agree to the <a routerLink="terms" target="_blank">terms and conditions</a>
                   </label>
                 </div>
               </div>
