--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,66 +1,98 @@
 <div class="container">
-    <div class="columns">
-        <div class="column">
-            <div class="title"> Zikos </div>
-            <p>Inscris toi stp !</p>
-            <p>En vrai on est des mecs cools et on va pas partager tes infos personnelles promis.</p>
-            <p>Sauf si on nous propose beaucoup d'argent mais c'est pas demain la veille</p>
-            <p>:)</p>
-        </div>
-        <div class="column">
-            <div class="field">
-                <label class="label">Username</label>
-                <div class="control">
-                  <input class="input" type="text" placeholder="Username">
-                </div>
-              </div>
-              
-            <div class="field">
-                <label class="label">Password</label>
-                <div class="control">
-                  <input class="input" type="password" placeholder="***">
-                </div>
-              </div>
-              
-              <div class="field">
-                <label class="label">Email</label>
-                <div class="control">
-                  <input class="input" type="email" placeholder="your@mail.com" value="your@mail.com">
-                </div>
-              </div>
-              
-              <div class="field">
-                <label class="label">Your instrument</label>
-                <div class="select is-multiple">
-                    <select multiple size="7">
-                        <option value="Yukulele">Yukulele</option>
-                        <option value="Guitar">Guitar</option>
-                        <option value="Piano">Piano</option>
-                        <option value="Saxophon">Saxophon</option>
-                        <option value="Flute">Flute</option>
-                        <option value="Violin">Violin</option>
-                        <option value="Trombon">Trombon</option>
-                    </select>
-                </div>
-              </div>
-
-              <div class="field">
-                <div class="control">
-                  <label class="checkbox">
-                    <input type="checkbox">
-                    I agree to the <a routerLink="terms" target="_blank">terms and conditions</a>
-                  </label>
-                </div>
-              </div>
-
-              <div class="field is-grouped">
-                <div class="control">
-                  <button class="button is-link">Submit</button>
-                </div>
-                <div class="control">
-                  <button class="button is-link is-light">Cancel</button>
-                </div>
-              </div>
-        </div>
+  <div class="columns">
+    <div class="column">
+      <div class="title"> Zikos </div>
+      <p>Inscris toi stp !</p>
+      <p>En vrai on est des mecs cools et on va pas partager tes infos personnelles promis.</p>
+      <p>Sauf si on nous propose beaucoup d'argent mais c'est pas demain la veille</p>
+      <p>:)</p>
     </div>
+    <div class="column">
+
+      <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+        <div class="field">
+          <label class="label">Username</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Username" formControlName="name" required>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control">
+            <input class="input" type="password" placeholder="***" formControlName="password">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Email</label>
+          <div class="control">
+            <input [ngClass]="{'is-danger': !isEmailValid(), 'input' : true === true}" type="email" placeholder="your@mail.com" value="your@mail.com" formControlName="email">
+            <span class="icon is-small is-right">
+              <i class="fas fa-exclamation-triangle"></i>
+            </span>
+            <p class="help is-danger" *ngIf="!isEmailValid()">This email is invalid</p>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Country</label>
+          <div class="control">
+            <div class="select">
+              <select  formControlName="country">
+                <option selected>Country</option>
+                <option value="FR">France</option>
+                <option value="ES">Spain</option>
+                <option value="BE">Belgium</option>
+                <option value="CH">Switzerland</option> 
+                <option value="EN">England</option>
+                <option value="SC">Scotland</option>
+                <option value="WA">Wales</option>
+                <option value="IR">Ireland</option>
+              </select>
+            </div>
+            <span class="icon is-small is-left">
+              <i class="fas fa-globe"></i>
+            </span>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Your instrument</label>
+          <div class="select is-multiple">
+            <select multiple size="7" formControlName="instrument">
+              <option value="Yukulele">Yukulele</option>
+              <option value="Guitar">Guitar</option>
+              <option value="Piano">Piano</option>
+              <option value="Saxophon">Saxophon</option>
+              <option value="Flute">Flute</option>
+              <option value="Violin">Violin</option>
+              <option value="Trombon">Trombon</option>
+            </select>
+          </div>
+        </div>
+
+        <div class="field">
+          <div class="control">
+            <label class="checkbox">
+              <input type="checkbox" formControlName="conditionsAgree">
+              I agree to the <a routerLink="terms" target="_blank">terms and conditions</a>
+            </label>
+          </div>
+        </div>
+
+        <div class="field is-grouped">
+          <div class="control">
+            <button class="button is-link" [disabled]="!isFormValid()">Submit</button> 
+          </div>
+          <div class="control">
+            <button class="button is-link is-light">Cancel</button>
+          </div>
+        </div>
+        
+      </form>
+
+    </div>
+  </div>
 </div>
