starting login form and adding a logo

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,7 +1,8 @@
 <div class="container">
   <div class="columns">
     <div class="column">
-      <div class="title"> Zikos </div>
+      
+      <img [src]="largeLogo" />
       <p>Inscris toi stp !</p>
       <p>En vrai on est des mecs cools et on va pas partager tes infos personnelles promis.</p>
       <p>Sauf si on nous propose beaucoup d'argent mais c'est pas demain la veille</p>
