--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,1 +1,39 @@
-<p>login works!</p>
+<div class="container">
+  <div class="columns">
+
+    <div class="column"></div>
+    <div class="column">
+
+      <img [src]="largeLogo" />
+      <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+        <div class="field">
+          <label class="label">Username</label>
+          <div class="control">
+            <input class="input" type="text" placeholder="Username" formControlName="name">
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label">Password</label>
+          <div class="control">
+            <input class="input" type="password" placeholder="***" formControlName="password">
+          </div>
+        </div>
+
+        <div class="field is-grouped is-expanded is-centered">
+          <div class="control">
+            <button class="button is-link" [disabled]="userForm.invalid">Submit</button>
+          </div>
+
+          <div class="control">
+            <button class="button is-link is-light">Cancel</button>
+          </div>
+        </div>
+      </form>
+
+    </div>
+
+    <div class="column"></div>
+  </div>
+</div>
