adding a welcome and a page not found components

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="columns">
     <div class="column">
-      
+
       <img [src]="largeLogo" />
       <p>Inscris toi stp !</p>
       <p>En vrai on est des mecs cools et on va pas partager tes infos personnelles promis.</p>
@@ -81,7 +81,7 @@
             <button class="button is-link" [disabled]="userForm.invalid">Submit</button> 
           </div>
           <div class="control">
-            <button class="button is-link is-light">Cancel</button>
+            <button class="button is-link is-light" routerLink="/">Cancel</button>
           </div>
         </div>
         
