--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -27,7 +27,7 @@
           </div>
 
           <div class="control">
-            <button class="button is-link is-light">Cancel</button>
+            <button class="button is-link is-light" routerLink="/">Cancel</button>
           </div>
         </div>
       </form>
