adding a logo on navbar

--- a/src/app/portal/components/header/header.component.html
+++ b/src/app/portal/components/header/header.component.html
@@ -11,6 +11,9 @@
 
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
+                
+                <img [src]="smallLogo" />
+
                 <a class="navbar-item">
                     Menu 1
                 </a>
