--- a/src/app/portal/components/header/header.component.html
+++ b/src/app/portal/components/header/header.component.html
@@ -12,7 +12,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 
-                <img [src]="smallLogo" />
+                <img src="/assets/logo.png" />
 
                 <a class="navbar-item">
                     Menu 1
